turtleart.triangleflat.TriangleFlat.scala.error
Compilation error:
TriangleFlat:1: error: Missing closing brace `}' assumed here
override def run() {
^TriangleFlat:1: error: expected start of definition
override def run() {
         ^